hphp/hack/test/typecheck/new_inference/typehole/lambda_with_invoke.php.like_types.exp
File "lambda_with_invoke.php", line 21, characters 29-48:
Invalid argument (Typing[4110])
File "lambda_with_invoke.php", line 14, characters 39-57:
Expected ~(function(~dynamic): void) because it is an unenforceable type
File "lambda_with_invoke.php", line 21, characters 29-48:
But got (function(~dynamic $m): dynamic)
